2008-03-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfxx-mips.c (mips_elf_record_got_page_entry): Update comment.
	(_bfd_mips_elf_check_relocs): Update comments.  Always call
	mips_elf_record_got_page_entry for R_MIPS_GOT_PAGE.

2008-03-27  Cary Coutant  <ccoutant@google.com>

        Add support for thin archives.
	* archive.c (_bfd_find_nested_archive): New function.
	(get_extended_arelt_filename): Add origin parameter.
	(_bfd_generic_read_ar_hdr_mag): Deal with extended name
	combined with a file offset.
	(append_relative_path): New function.
	(_bfd_get_elt_at_filepos): Deal with external members and
	nested archives.
	(bfd_generic_openr_next_archived_file): Thin archives.
	(bfd_generic_archive_p): Recognize new magic string.
	(adjust_relative_path): New function.
	(_bfd_construct_extended_name_table): Construct extended
	names for thin archive members.
	(_bfd_write_archive_contents): Emit new magic string, skip
	copying files for thin archives.
	* bfd-in.h (bfd_is_thin_archive): New macro.
	* bfd.c (struct bfd): New fields for thin archives.
	* libbfd-in.h (struct areltdata): New field for thin archives.
	* opncls.c (bfd_close): Delete BFDs for nested archives.

2008-03-25  Bernd Schmidt  <bernd.schmidt@analog.com>

	* elf32-bfin.c (bfin_final_link_relocate): New function, wrapper around
	_bfd_final_link_relocate that also handles R_pcrel24 relocs.
	(bfinfdpic_relocate_section, bfin_relocate_section): Use it.

2008-03-25  Nathan Sidwell  <nathan@codesourcery.com>

	* elf32-arm.c (elf32_arm_final_link_relocate): Skip dynamic relocs
	in vxworks tls_vars sections.
	(allocate_dynrelocs, elf32_arm_size_dynamic_sections): Likewise.
	* elf32-i386.c (allocate_dynrelocs,
	elf_i386_size_dynamic_sections, elf_i386_relocate_section): Likewise.
	* elf32-ppc.c (allocate_dynrelocs, ppc_elf_size_dynamic_sections,
	ppc_elf_relocate_section): Likewise.
	* elf32-sh.c (allocate_dynrelocs, sh_elf_size_dynamic_sections,
	sh_elf_relocate_section): Likewise.